# KantorKu

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  tsconfig.json  worklog.md
.kantorku/: AGENTS.md  README.md  (+3 more)
download/kantorku/: ADDING_WORKERS.md  PANDUAN_PEMASANGAN.md  generate_install_guide.py  kantorku.toml  pyproject.toml
download/kantorku/data/: ring2.db
download/kantorku/data/snapshots/: office_20260430_175020.json  office_20260430_181103.json
download/kantorku/examples/: 01_basic_usage.py  03_hooks_and_streaming.py
download/kantorku/kantorku/: __init__.py  cli.py  dag.py  delegation.py  errors.py  health.py  hooks.py  office.py  persistence.py  protocol.py  provider_response.py  server.py  task_queue.py
download/kantorku/kantorku/config/: __init__.py
download/kantorku/kantorku/events/: __init__.py  emitter.py
download/kantorku/kantorku/interface/: __init__.py  health.py  protocol.py  server.py
download/kantorku/kantorku/layers/: __init__.py  briefing_room.py  conductor.py  intake.py  worker_hub.py
download/kantorku/kantorku/memory/: __init__.py  ring2.py
download/kantorku/kantorku/pool/: __init__.py  context_pool.py
download/kantorku/kantorku/providers/: __init__.py  anthropic_provider.py  base.py  circuit_breaker.py  deepseek_provider.py  google_provider.py  minimax_provider.py  ollama_provider.py  openai_compat.py  router.py
download/kantorku/kantorku/redteam/: autotune.py  classify.py  godmode.py  parseltongue.py  scoring.py
download/kantorku/kantorku/tui/: __init__.py  app.py  commands.py  connection.py  markdown_renderer.py  themes.py
download/kantorku/kantorku/worker/: __init__.py  base.py  generator.py  identity.py  registry.py
download/kantorku/kantorku/workers/: __init__.py  coder_backend.py  coder_frontend.py  narrator.py  scout.py  summarizer.py  verifier_engineer.py
download/kantorku/tests/: test_p3.py  test_plug_and_play.py
download/kantorku/workers/auditor/: plugin.json
download/kantorku/workers/coder_backend/: SKILL.md  plugin.json
download/kantorku/workers/coder_frontend/: SKILL.md  plugin.json
download/kantorku/workers/coder_wiring/: SKILL.md  plugin.json
download/kantorku/workers/debugger/: SKILL.md  plugin.json
download/kantorku/workers/intake/: plugin.json
download/kantorku/workers/narrator/: SKILL.md  plugin.json
fought-tui/: AUDIT_SCORES.md  Cargo.toml
fought-tui/src/: app.rs  main.rs
fought-tui/src/modes/: kantor.rs  library.rs  mod.rs
fought-tui/src/panels/: mod.rs
fought-tui/src/state/: app_state.rs  config.rs  kantor_state.rs  library_state.rs  mod.rs
fought-tui/src/transport/: http.rs  types.rs  websocket.rs
fought-tui/src/ui/: components.rs  keybindings.rs  mod.rs  theme.rs
framework/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PANDUAN_PEMASANGAN.md  README.md  SECURITY.md  kantorku.toml  pyproject.toml
framework/data/: autotune_ema.json
framework/examples/: 02_custom_worker.py
framework/kantorku/: __init__.py  cost.py  office.py
framework/kantorku/events/: bus.py
framework/kantorku/gpu/: README.md  __init__.py
framework/kantorku/interface/: persistence.py  task_queue.py
framework/kantorku/layers/: __init__.py  ceo_mode.py  conductor.py  enhanced_checkpoint.py  execution_channel.py  group_channel.py  halt_conditions.py  self_healing.py  smart_plan.py  token_budget.py  worker_evolve.py  worker_hub.py
framework/kantorku/losion/: README.md  __init__.py  config.py
framework/kantorku/memory/: __init__.py  ring2.py  ring3.py
framework/kantorku/pool/: context_pool.py
framework/kantorku/providers/: base.py  router.py
framework/kantorku/redteam/: __init__.py  autotune.py  stm.py
framework/kantorku/symbolic/: README.md  __init__.py
framework/kantorku/tui/: DESIGN_INSPIRATION.md  __init__.py  app.py  cli.py  commands.py  settings_screen.py  themes.py
framework/kantorku/worker/: base.py  identity.py  registry.py
framework/kantorku/workers/: auditor.py  coder_backend.py  coder_frontend.py  debugger.py  intake_worker.py  narrator.py  scout.py  sentinel.py  summarizer.py  verifier_designer.py  verifier_engineer.py
framework/tests/: test_components.py  test_p3.py  test_p4.py
framework/workers/auditor/: plugin.json
framework/workers/coder_backend/: plugin.json
framework/workers/coder_frontend/: plugin.json
framework/workers/coder_wiring/: plugin.json
framework/workers/debugger/: plugin.json
framework/workers/intake/: SKILL.md
framework/workers/sentinel/: SKILL.md  plugin.json
framework/workers/summarizer/: SKILL.md
(+633 files in other folders)
