[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kantorku"
version = "0.5.0"
description = "Kantor digital yang sesungguhnya — AI worker orchestration framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Wolfvin" }]
keywords = ["ai", "agents", "orchestration", "llm", "multi-agent", "office", "tui", "textual", "library", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
license-files = ["LICENSE"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "toml>=0.10.2",
    "duckdb>=1.1.0",
    "aiosqlite>=0.20.0",
    "pyarrow>=17.0.0",
    "anyio>=4.6.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
google = ["google-genai>=1.0.0"]
deepseek = ["openai>=1.50.0"]
minimax = ["openai>=1.50.0"]
ollama = ["openai>=1.50.0"]
tui = [
    "textual>=0.40.0",
    "rich>=13.0.0",
    "websockets>=13.0",
]
library = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
all = [
    "anthropic>=0.39.0",
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "textual>=0.40.0",
    "rich>=13.0.0",
    "websockets>=13.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
kantorku = "kantorku.tui.cli:main"

[project.urls]
Homepage = "https://github.com/Wolfvin/KantorKu"
Repository = "https://github.com/Wolfvin/KantorKu"
Issues = "https://github.com/Wolfvin/KantorKu/issues"
Discussions = "https://github.com/Wolfvin/KantorKu/discussions"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
